test/TestPhases/parser/invalid/invalidstring.blc
@[CFunction (binding ="""do not z allow🔥 this def""", 
             header = "<c-function>.h")]
extern function f()

@[EntryPoint]
activity Main () ()
	 e()
    ⛑f()
	🔥g()
	await				true
    h()
end